-
Bug
-
Resolution: Done
-
P2: Important
-
5.3.1, 5.4.0 RC
-
None
-
Archlinux
-
30772c7270aeae784bebe20fe68fad93ea332fb0
When trying to load https://bugzilla.mozilla.org/show_bug.cgi?id=642974 (or any other bug in that bugzilla) with the example browser, some text doesn't render, (see the attached screenshot) and I get loads of these Qt warnings:
load glyph failed err=8b face=0x1925760, glyph=N
QFontEngine: Glyph neither outline nor bitmap format=0
For Gerrit Dashboard: QTBUG-41034 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
101302,2 | Fix loading of web fonts with broken hinting bytecode | 5.4 | qt/qtbase | Status: MERGED | +2 | 0 |