src/gui/text/qfontengine_ft_p.h
@@ -1239,6 +1239,7 @@ name|QFreetypeFace
 operator|*
 name|freetype
 block|;
+name|mutable
 name|int
 name|default_load_flags
 block|;
